# mosaic-AI

./: .gitignore  CLAUDE.md  README.md  arena.py  config.py  export_onnx.py  self_play.py  server.py  train.py
.claude/: launch.json
agents/: agent_env.py  agents.py  alphazero.py  mcts.py  neural_net.py  shaping.py
archive/: 2026-06-14_MCTS_Checkup.md  2026-06-16_MCTS_Checkup.md  2026-06-20_MCTS_Checkup.md  Arena Debug Command.txt  STAGE2_TODO_ARCHIVED.md  check_pkl.py  debug_data.py  debug_game.py  feature_importance.py  floor_policy_vs_search.py  heuristic_agent.md  log_analysis.py  replay.html  self_play_v0.py  stage2_investigation.md  stage2_smoketest.onnx  v1b_w0_e50_eval.md  (+5 more)
engine/: Cargo.toml  board.py  dome.py  execution.py  factory.py  game.py  moves.py  pyproject.toml  round_end.py  scoring.py  serializer.py  server_ai_test.py  setup.py  smoketest.py  supply.py  validation.py
engine/benches/: clone_cost.rs
engine/examples/: net_determinism.rs  profile_clones.rs
engine/py/: neural_net.py
engine/src/: board.rs  dome.rs  execution.rs  factory.rs  features.rs  game.rs  lib.rs  mcts.rs  moves.rs  net.rs  net_mcts.rs  profiling.rs  py.rs  round5.rs  round_end.rs  round_transition.rs  round_transition_deep.rs  scoring.rs  search_common.rs  self_play.rs  serialize.rs  state.rs  supply.rs  tile.rs  tiling_solver.rs  validation.rs
rust/: Cargo.toml  server_ai_test.py  server_rust_test.py
rust/src/: board.rs  dome.rs  evaluate.rs  execution.rs  game.rs  lib.rs  mcts.rs  moves.rs  py.rs  round_end.rs  serialize.rs  state.rs  supply.rs  tiling_solver.rs
(+128 files in other folders)
