[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "mosaic_rust"
version = "0.1.0"
description = "Rust engine + MCTS + self-play for Mosaic-AI"
requires-python = ">=3.9"

[tool.maturin]
# Reines Rust-Extension-Modul (kein Python-Quellpaket daneben).
features = ["pyo3/extension-module"]
