[package]
name = "mosaic_rust"
version = "0.1.0"
edition = "2021"
description = "Rust engine + MCTS + self-play for Mosaic-AI, exposed to Python via PyO3"

[lib]
name = "mosaic_rust"
# cdylib: importierbares Python-Extension-Modul (.pyd/.so)
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.29.0", features = ["extension-module"] }
rand = "0.10.1"
# pyo3-Version wird via `cargo add` auf die neueste 3.14-kompatible gesetzt.
